k8s/home-assistant.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      volumes:
      # TODO: look into k8s persistent volumes for this
      - name: ha-config
        hostPath:
          path: /root/ha-config
      - name: ttyacm
        hostPath:
          type: CharDevice
          path: /dev/ttyACM0
      containers:
        - name: home-assistant
          image: homeassistant/home-assistant:stable
          securityContext:
            privileged: true
          volumeMounts:
            - name: ha-config
              mountPath: /config
            - name: ttyacm
              mountPath: /dev/ttyACM0
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant

spec:
  ports:
    - name: http
      port: 80
      targetPort: 8123
  selector:
    app: home-assistant
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: home-assistant
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
      - home-assistant.clark.snowdon.jflei.com
      secretName: home-assistant-tls
  rules:
  - host: home-assistant.clark.snowdon.jflei.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: home-assistant
              port:
                number: 80
