k8s/radarr.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: radarr
  namespace: vpn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      volumes:
      # TODO: look into k8s persistent volumes for this
      - name: radarr-config
        hostPath:
          path: /state/radarr-config
      - name: mnt-media
        hostPath:
          path: /mnt/media
      containers:
        - name: radarr
          image: cr.hotio.dev/hotio/radarr
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: mnt-media
              mountPath: /mnt/media
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: vpn

spec:
  ports:
    - name: http
      port: 80
      targetPort: 7878
  selector:
    app: radarr
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: radarr
  namespace: vpn
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-snowauth@kubernetescrd
spec:
  tls:
    - hosts:
      - radarr.clark.snowdon.jflei.com
      secretName: radarr-tls
  rules:
  - host: radarr.clark.snowdon.jflei.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: radarr
              port:
                number: 80
