k8s/vpn.yaml
# Based on https://docs.k8s-at-home.com/guides/pod-gateway/

apiVersion: v1
kind: Namespace
metadata:
  name: vpn
  labels:
    routed-gateway: "true"

---
# Ensure that even if something goes wrong, traffic won't leak outside of the vpn.
# https://docs.k8s-at-home.com/guides/pod-gateway/#network-policy
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: vpn-namespace
  namespace: vpn
spec:
  podSelector: {}
  ingress:
  - from:
    # Only allow ingress from K8S
    - ipBlock:
        cidr: 10.0.0.0/8
  egress:
  - to:
    # Only allow egress to K8S
    - ipBlock:
        cidr: 10.0.0.0/8
  policyTypes:
    - Ingress
    - Egress
